# confocal-toolkit

./: .gitignore  README.md  environment.yml  pyproject.toml
confocal_toolkit/: __init__.py  figure.py  geometry.py  metadata.py  retina_field_extractor.py
tests/: test_figure.py  test_geometry.py  test_pipeline.py
